--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
+    "body-parser": "^1.18.3",
     "chai": "^4.1.2",
     "coffeescript": "^2.3.1",
     "mocha": "^5.2.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.16.3"
+  },
   "scripts": {
     "test": "./node_modules/.bin/mocha --require babel-core/register ./src/**/*.test.js",
     "test:watch": "./node_modules/.bin/mocha --require babel-core/register ./src/**/*.test.js --watch --reporter min"
