--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "name-normalizer",
   "version": "0.1.0",
   "devDependencies": {
+    "async": "^2.6.1",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
     "coffeescript": "^2.3.1",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "supertest": "^3.1.0"
   },
   "dependencies": {
     "express": "^4.16.3"
