--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "express": "^4.16.3"
   },
   "scripts": {
-    "test": "./node_modules/.bin/mocha --require babel-core/register ./src/**/*.test.js",
-    "test:watch": "./node_modules/.bin/mocha --require babel-core/register ./src/**/*.test.js --watch --reporter min"
+    "test": "./node_modules/.bin/mocha --require babel-core/register",
+    "test:watch": "./node_modules/.bin/mocha --require babel-core/register --watch --reporter min"
   }
 }
