--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "supertest": "^3.1.0"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "sinon": "^6.1.5"
   },
   "scripts": {
     "test": "./node_modules/.bin/mocha --require babel-core/register",
