--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
     "coffeescript": "^2.3.1",
+    "eslint": "^5.4.0",
     "express": "^4.16.3",
     "mocha": "^5.2.0",
     "sinon": "^6.1.5",
