--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chai": "^4.1.2",
     "coffeescript": "^2.3.1",
     "eslint": "^5.4.0",
+    "eslint-plugin-react": "^7.11.1",
     "express": "^4.16.3",
     "mocha": "^5.2.0",
     "sinon": "^6.1.5",
@@ -18,7 +19,8 @@
   "scripts": {
     "test": "./node_modules/.bin/mocha --require babel-core/register --require babel-polyfill --./src/**/*.test.js",
     "test:watch": "./node_modules/.bin/mocha --require babel-core/register --require babel-polyfill ./src/**/*.test.js --watch --reporter min",
-    "compile": "babel src --out-dir .compiled --source-maps --watch"
+    "compile": "babel src --out-dir .compiled --source-maps --watch",
+    "lint": "./node_modules/.bin/eslint src/**"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0"
