--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lint": "./node_modules/.bin/eslint src/**"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0"
+    "babel-polyfill": "^6.26.0",
+    "sinon-chai": "^3.2.0"
   }
 }
