--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.3",
     "mocha": "^5.2.0",
     "sinon": "^6.1.5",
+    "sinon-chai": "^3.2.0",
     "supertest": "^3.1.0"
   },
   "scripts": {
