--- a/package.json
+++ b/package.json
@@ -2,28 +2,27 @@
   "name": "name-normalizer",
   "version": "0.1.0",
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/register": "^7.0.0",
     "async": "^2.6.1",
     "axios": "^0.18.0",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
     "body-parser": "^1.18.3",
-    "chai": "^4.1.2",
-    "coffeescript": "^2.3.1",
-    "eslint": "^5.4.0",
+    "chai": "^4.2.0",
+    "coffeescript": "^2.3.2",
+    "eslint": "^5.8.0",
     "eslint-plugin-react": "^7.11.1",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "mocha": "^5.2.0",
-    "sinon": "^6.1.5",
+    "sinon": "^7.1.1",
     "sinon-chai": "^3.2.0",
-    "supertest": "^3.1.0"
+    "supertest": "^3.3.0"
   },
   "scripts": {
-    "test": "./node_modules/.bin/mocha --require babel-core/register --require babel-polyfill --./src/**/*.test.js",
-    "test:watch": "./node_modules/.bin/mocha --require babel-core/register --require babel-polyfill ./src/**/*.test.js --watch --reporter min",
+    "test": "./node_modules/.bin/mocha --require @babel/register --require @babel/polyfill --./src/**/*.test.js",
+    "test:watch": "./node_modules/.bin/mocha --require @babel/register --require @babel/polyfill ./src/**/*.test.js --watch --reporter min",
     "compile": "babel src --out-dir .compiled --source-maps --watch",
     "lint": "./node_modules/.bin/eslint src/**"
-  },
-  "dependencies": {
-    "babel-polyfill": "^6.26.0"
   }
 }
