--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/register": "^7.0.0",
     "async": "^2.6.1",
     "axios": "^0.18.0",
+    "babel-plugin-rewire-exports": "^1.0.1",
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
     "coffeescript": "^2.3.2",
@@ -17,7 +18,8 @@
     "mocha": "^5.2.0",
     "sinon": "^7.1.1",
     "sinon-chai": "^3.2.0",
-    "supertest": "^3.3.0"
+    "supertest": "^3.3.0",
+    "testdouble": "^3.8.2"
   },
   "scripts": {
     "test": "./node_modules/.bin/mocha --require @babel/register --require @babel/polyfill --./src/**/*.test.js",
