cleaned up name normalizer and added appropriate linting"

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,29 +1,30 @@
 {
-    "env": {
-        "browser": true,
-        "es6": true,
-        "mocha": true
+  "env": {
+    "browser": true,
+    "es6": true,
+    "mocha": true
+  },
+  "extends": "eslint:recommended",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
     },
-    "extends": "eslint:recommended",
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": 2018,
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react"
+    "ecmaVersion": 2018,
+    "sourceType": "module"
+  },
+  "plugins": [
+    "react",
+    "mocha"
+  ],
+  "rules": {
+    "no-unused-vars": ["error", { "vars": "local", "args": "after-used", "argsIgnorePattern": "_" }],
+    "indent": [
+      "error",
+        2
     ],
-    "rules": {
-        "no-unused-vars": ["error", { "vars": "local", "args": "after-used", "argsIgnorePattern": "_" }],
-        "indent": [
-            "error",
-            2
-        ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ]
-    }
+    "linebreak-style": [
+      "error",
+      "unix"
+    ]
+  }
 }
