--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chai": "^4.2.0",
     "coffeescript": "^2.3.2",
     "eslint": "^5.8.0",
+    "eslint-plugin-mocha": "^5.2.0",
     "eslint-plugin-react": "^7.11.1",
     "express": "^4.16.4",
     "mocha": "^5.2.0",
