added mocha param

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-react": "^7.11.1",
     "express": "^4.16.4",
     "mocha": "^5.2.0",
+    "mocha-param": "^2.0.0",
     "sinon": "^7.1.1",
     "sinon-chai": "^3.2.0",
     "supertest": "^3.3.0",
