--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "scripts": {
     "test": "./node_modules/.bin/mocha --require @babel/register --require @babel/polyfill --./src/**/*.test.js",
     "test:watch": "./node_modules/.bin/mocha --require @babel/register --require @babel/polyfill ./src/**/*.test.js --watch --reporter min",
+    "test:report": "./node_modules/.bin/mocha --require @babel/register --require @babel/polyfill ./src/**/*.test.js",
     "compile": "babel src --out-dir .compiled --source-maps --watch",
     "lint": "./node_modules/.bin/eslint src/**"
   }
